# BM_template_STM32G431

./: .gitignore  CMakeLists.txt  README.md
app/inc/: functions.h  settings.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  uart.h  variables.h
app/src/: callbacks.c  functions.c  main.c  settings.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  uart.c
system/inc/: stm32g4xx.h
